[package]
name = "compiler"
version = "0.1.0"
authors = ["Alexandre ANDRE <aa.alexandre.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
regex = "1.4.2"
structopt = "0.3.13"
arch = { path = "../arch" }
